--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,4 +66,15 @@
 	--color-input: var(--input);
 	--color-ring: var(--ring);
 }
-  
+
+@utility pb-safe {
+    padding-bottom: env(safe-area-inset-bottom);
+}
+
+@utility mask-to-b {
+	mask: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)
+}
+
+@utility mask-to-t {
+	mask: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)
+}
